@@ -1,4 +1,4 @@
-2007-12-18  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+2008-01-05  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
 	* libspectrum 0.4.0 released.
 
